src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel1__c</fullName>
        <description>Total Influence Model 1</description>
        <formula>FCRM__FCR_ClosedOpRevenueModel1__c + FCRM__FCR_OpenOpRevenueModel1__c + FCRM__FCR_LostOpRevenueModel1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 1</inlineHelpText>
        <label>Total Op Revenue Model1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel2__c</fullName>
        <description>Total Influence Model 2</description>
        <formula>FCRM__FCR_ClosedOpRevenueModel2__c + FCRM__FCR_OpenOpRevenueModel2__c + FCRM__FCR_LostOpRevenueModel2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 2</inlineHelpText>
        <label>Total Op Revenue Model2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_TotalOpRevenueModel3__c</fullName>
        <description>Total Influence Model 3</description>
        <formula>FCRM__FCR_ClosedOpRevenueModel3__c + FCRM__FCR_OpenOpRevenueModel3__c + FCRM__FCR_LostOpRevenueModel3__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Influence Model 3</inlineHelpText>
        <label>Total Op Revenue Model3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FCRM__FCR_View_Response__c</fullName>
        <description>Used for related list views on Lead and Contact page layouts</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,&quot;View Response&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Response</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCRM__Opportunity_Value_Open__c</fullName>
        <description>Amount of related open opportunity. Based on standard opportunity Amount field.</description>
        <formula>IF( 
AND(
NOT(ISBLANK( FCRM__FCR_Opportunity__c )), 
 FCRM__FCR_Opportunity__r.IsClosed = False
) , FCRM__FCR_Opportunity_Amount__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Amount of related open opportunity. Based on standard opportunity Amount field.</inlineHelpText>
        <label>Opportunity Value Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FC_Reanimation_Date__c</fullName>
        <label>Reanimation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>First_Owner_Assigned_Funtion__c</fullName>
        <formula>IF(CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;Inside Sales&apos;),&apos;ISR&apos;,
IF(CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;Partner&apos;), &apos;Partner&apos;,
IF(AND(CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;Sales&apos;),CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;Leader&apos;),OR(CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;Rep&apos;),CONTAINS(CFCR_First_Owner_Assigned_Role__c,&apos;FSR&apos;))),&apos;FSR&apos;,&apos; &apos;
)))</formula>
        <label>First Owner Assigned Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Owner_Assigned_Geo__c</fullName>
        <formula>IF(CONTAINS(CFCR_First_Owner_Assigned_Role__c, &apos;EMEA&apos;),&apos;EMEA&apos;,
IF(CONTAINS(CFCR_First_Owner_Assigned_Role__c, &apos;ROW&apos;), &apos;ROW&apos;,
IF(CONTAINS(CFCR_First_Owner_Assigned_Role__c, &apos;Partner&apos;),&apos;Partner&apos;,
&apos;North America&apos;
)))</formula>
        <label>First Owner Assigned Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Owner_Worked_Function__c</fullName>
        <formula>IF(CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;Inside Sales&apos;),&apos;ISR&apos;, 
IF(CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;Partner&apos;), &apos;Partner&apos;, 
IF(AND(CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;Sales&apos;),CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;Leader&apos;),OR(CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;Rep&apos;),CONTAINS(FCRM__FCR_First_Owner_Worked__c,&apos;FSR&apos;))),&apos;FSR&apos;,&apos; &apos; 
)))</formula>
        <label>First Owner Worked Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Owner_Worked_Geo__c</fullName>
        <formula>IF(CONTAINS(FCRM__FCR_First_Owner_Worked__c, &apos;EMEA&apos;),&apos;EMEA&apos;, 
IF(CONTAINS(FCRM__FCR_First_Owner_Worked__c, &apos;ROW&apos;), &apos;ROW&apos;, 
IF(CONTAINS(FCRM__FCR_First_Owner_Worked__c, &apos;Partner&apos;),&apos;Partner&apos;, 
&apos;North America&apos; 
)))</formula>
        <label>First Owner Worked Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_City_New__c</fullName>
        <formula>IF(NOT(ISBLANK( ContactId )),(Contact.Current_City__c) ,(Lead.Current_City__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP-Based City (Current)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_City__c</fullName>
        <label>IP-Based City (On Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_Country_New__c</fullName>
        <formula>IF(NOT(ISBLANK( ContactId )),(Contact.Current_Country__c) ,(Lead.Current_Country__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP-Based Country (Current)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_Country__c</fullName>
        <label>IP-Based Country (On Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_State_Province_New__c</fullName>
        <formula>IF(NOT(ISBLANK( ContactId )),(Contact.Current_State_Province__c) ,(Lead.Current_State_Province__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP-Based State/Province (Current)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Based_State_Province__c</fullName>
        <label>IP-Based State/Province (On Create)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner_Email__c</fullName>
        <formula>IF(ISBLANK(Lead.Owner:User.Email),  Contact.Owner.Email, Lead.Owner:User.Email )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead/Contact Owner Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Contact_Owner_Role__c</fullName>
        <formula>IF(ISBLANK(Lead.Contact_Owner_Role__c), Contact.Contact_Owner_Role__c, Lead.Contact_Owner_Role__c)</formula>
        <label>Lead/Contact Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Role__c</fullName>
        <formula>Lead.Contact_Owner_Role__c</formula>
        <label>Lead Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Details (On Create)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Details_On_Update__c</fullName>
        <label>Lead Source Details (On Update)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_On_Update__c</fullName>
        <description>Most recent Lead source value on the related lead/contact during an engagement. full circle sync on create and on update.</description>
        <inlineHelpText>Most recent Lead source value on the related lead/contact during an engagement.</inlineHelpText>
        <label>Lead Source (On Update)</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Lead source on the related lead/contact at the time of the response. full circle sync on create.</description>
        <inlineHelpText>Lead source on the related lead/contact at the time of the response.</inlineHelpText>
        <label>Lead Source</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <label>Lead Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lite_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lite User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Responses__c</fullName>
        <description>Use for report filters - checked if lead or contact owner is the running user.</description>
        <formula>IF( Lead.OwnerId = $User.Id , TRUE,
IF( Contact.OwnerId = $User.Id , TRUE,
FALSE))</formula>
        <inlineHelpText>Use for report filters - checked if lead or contact owner is the running user.</inlineHelpText>
        <label>My Responses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note_to_Sales__c</fullName>
        <label>Note to Sales</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Origin_LP__c</fullName>
        <label>Origin LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Origin_Source_Detail__c</fullName>
        <formula>TEXT(Lead.Lead_Origin_Detail__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Source Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Source_Type__c</fullName>
        <formula>TEXT(Lead.Origin_Source_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Origin Source Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Referrer__c</fullName>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Response_Keyword__c</fullName>
        <label>Original Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Response_Vendor__c</fullName>
        <label>Original Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Function__c</fullName>
        <formula>IF(CONTAINS(Lead_Contact_Owner_Role__c,&apos;Inside Sales&apos;),&apos;ISR&apos;, 
IF(CONTAINS(Lead_Contact_Owner_Role__c,&apos;Partner&apos;), &apos;Partner&apos;, 
IF(AND(OR(CONTAINS(Lead_Contact_Owner_Role__c,&apos;Sales&apos;),CONTAINS(Lead_Contact_Owner_Role__c,&apos;Territory&apos;),CONTAINS(Lead_Contact_Owner_Role__c,&apos;Accounts&apos;)),OR(CONTAINS(Lead_Contact_Owner_Role__c,&apos;Rep&apos;),CONTAINS(Lead_Contact_Owner_Role__c,&apos;Leader&apos;),CONTAINS(Lead_Contact_Owner_Role__c,&apos;FSR&apos;))),&apos;FSR&apos;,&apos; &apos; 
)))</formula>
        <label>Lead/Contact Owner Function</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Geo__c</fullName>
        <formula>IF(ISBLANK(TEXT(Lead.Owner:User.Geo__c)),TEXT(Contact.Owner.Geo__c), TEXT(Lead.Owner:User.Geo__c))</formula>
        <label>Lead/Contact Owner Geo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Score_Current__c</fullName>
        <formula>IF(ISBLANK(Lead.Id),Contact.Profile_Score_Tier__c ,Lead.Profile_Score_Tier__c )</formula>
        <label>Profile Score (Current)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Score_Tier_On_Create__c</fullName>
        <description>Synced from Lead or Contact Profile Score Tier On Create</description>
        <inlineHelpText>Synced from Lead or Contact Profile Score Tier On Create</inlineHelpText>
        <label>Profile Score Tier (On Create)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QL_to_SRL_WD__c</fullName>
        <description># WEEKDAYS from QL to SRL - Same day = 0, Evaluates to blank if SRL Date is blank. Weekdays is based on Org company settings.</description>
        <formula>IF( NOT(ISBLANK(CFCR_SRL_Date__c)),

IF( CASE(MOD( FCRM__FCR_QR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c )/7)*5) &lt;=0 , 0,

CASE(MOD( FCRM__FCR_QR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c )/7)*5) -1),
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText># WEEKDAYS from QL to SRL - Same day = 0, Evaluates to blank if SRL Date is blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>QL to SRL WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QL_to_SRL__c</fullName>
        <formula>CFCR_SRL_Date__c - FCRM__FCR_QR_Date__c</formula>
        <label>QL to SRL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RegisteredForHotel__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>RegisteredForHotel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegistrationTypeCode__c</fullName>
        <description>For CVent integration</description>
        <label>RegistrationTypeCode</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RegistrationType__c</fullName>
        <description>For CVent Integration</description>
        <inlineHelpText>For CVent Integration</inlineHelpText>
        <label>RegistrationType</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Response_Detail__c</fullName>
        <description>Synced from lead/contact on response create</description>
        <inlineHelpText>Synced from lead/contact on response create</inlineHelpText>
        <label>Response Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Keyword__c</fullName>
        <label>Response Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_LP__c</fullName>
        <label>Response LP</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Response_Type__c</fullName>
        <description>Synced on create from related lead &amp; contact</description>
        <inlineHelpText>Synced on create from related lead &amp; contact</inlineHelpText>
        <label>Response Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_Vendor__c</fullName>
        <label>Response Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAL_to_SRL_WD__c</fullName>
        <description># WEEKDAYS from SAL to SRL - Same day = 0, Evaluates to blank if SRL Date is blank. Weekdays is based on Org company settings.</description>
        <formula>IF( NOT(ISBLANK(CFCR_SRL_Date__c)),

IF( CASE(MOD( FCRM__FCR_SAR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c )/7)*5) &lt;=0 , 0,

CASE(MOD( FCRM__FCR_SAR_Date__c - DATE(1985,6,24),7),
0 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1),
1 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1),
2 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1),
3 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1),
4 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1),
5 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0),
6 , CASE( MOD( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0),
999)
+
(FLOOR(( CFCR_SRL_Date__c - FCRM__FCR_SAR_Date__c )/7)*5) -1),
null)</formula>
        <inlineHelpText># WEEKDAYS from SAL to SRL - Same day = 0, Evaluates to blank if SRL Date is blank. Weekdays is based on Org company settings.</inlineHelpText>
        <label>SAL to SRL WD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAL_to_SRL__c</fullName>
        <formula>CFCR_SRL_Date__c -  FCRM__FCR_SAR_Date__c</formula>
        <label>SAL to SRL</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SQO_to_VO__c</fullName>
        <description># Days from SQO to VO - Evaluates to blank if VO Date if blank.</description>
        <formula>VO_Date__c - FCRM__FCR_SQR_Date__c</formula>
        <inlineHelpText># Days from SQO to VO - Evaluates to blank if VO Date if blank.</inlineHelpText>
        <label>SQO to VO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Segment__c</fullName>
        <formula>IF(ISBLANK(Lead.Id),Contact.Account.Sales_Segment__c, Lead.Sales_Segment__c)</formula>
        <label>Sales Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_Service_Product__c</fullName>
        <formula>IF(ISBLANK(TEXT(Lead.Self_Service_Product__c)), TEXT(Contact.Self_Service_Product__c), TEXT(Lead.Self_Service_Product__c))</formula>
        <label>Self-Service Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Reason__c</fullName>
        <label>Status Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppDynamics Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Longer with Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPAMmy data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not suitable for AppDynamics sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ops Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Competitive Solution Installed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immediate Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Couldn&apos;t Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inaccurate Contact Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing AppD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not a Technology Fit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VO_Date__c</fullName>
        <description>VO Achieved Date - formula of VO checkbox from the opportunity set for stage progression beyond B2</description>
        <formula>DATEVALUE( FCRM__FCR_Opportunity__r.VO_Date__c )</formula>
        <inlineHelpText>VO Achieved Date - formula of VO checkbox from the opportunity set for stage progression beyond B2</inlineHelpText>
        <label>VO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VO__c</fullName>
        <description>VO Achieved - formula of VO checkbox from the opportunity set for stage progression beyond B2</description>
        <formula>FCRM__FCR_Opportunity__r.VO__c</formula>
        <inlineHelpText>VO Achieved - formula of VO checkbox from the opportunity set for stage progression beyond B2</inlineHelpText>
        <label>VO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VO_to_VO_Won__c</fullName>
        <description># Days from VO to VO Won - Evaluates to blank if VO Won Date if blank.</description>
        <formula>IF( FCRM__FCR_Opportunity_Closed_Won__c = &quot;True&quot;, FCRM__FCR_Opportunity_Closed_Date__c - VO_Date__c, null)</formula>
        <inlineHelpText># Days from VO to VO Won - Evaluates to blank if VO Won Date if blank.</inlineHelpText>
        <label>VO to VO Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>poll1answer__c</fullName>
        <description>On24 Poll Answer</description>
        <label>Answer 1</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>poll1question__c</fullName>
        <description>On24 Questions</description>
        <label>Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>poll2answer__c</fullName>
        <label>Answer 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>poll2question__c</fullName>
        <description>On24 Poll Question</description>
        <label>Question 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>poll3answer__c</fullName>
        <description>On24 Poll Answer</description>
        <label>Answer 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>poll3question__c</fullName>
        <description>On24 Poll Question</description>
        <label>Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>